updating api calls

--- a/app/base/templates/includes/scripts.html
+++ b/app/base/templates/includes/scripts.html
@@ -3,3 +3,4 @@
 <script src="/static/assets/vendors/js/vendor.bundle.addons.js"></script>
 <script src="/static/assets/js/shared/off-canvas.js"></script>
 <script src="/static/assets/js/shared/misc.js"></script>
+<script src="/static/assets/js/shared/utils.js"></script>
