--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -7,14 +7,14 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-
+  
   <div class="content-wrapper">
     <!-- Page Title Header Starts-->
     <div class="row page-title-header">
       <div class="col-12">
         <div class="page-header">
-          <h4 class="page-title">Dashboard</h4>
-          <div class="quick-link-wrapper w-100 d-md-flex flex-md-wrap">
+          <h4 class="page-title">Eco-Census</h4>
+          <!-- <div class="quick-link-wrapper w-100 d-md-flex flex-md-wrap">
             <ul class="quick-links">
               <li><a href="#">ICE Market data</a></li>
               <li><a href="#">Own analysis</a></li>
@@ -25,15 +25,21 @@
               <li><a href="#">Analytics</a></li>
               <li><a href="#">Watchlist</a></li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="col-md-12">
         <div class="page-header-toolbar">
-          <div class="btn-group toolbar-item" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-secondary"><i class="mdi mdi-chevron-left"></i></button>
-            <button type="button" class="btn btn-secondary">03/02/2019 - 20/08/2019</button>
-            <button type="button" class="btn btn-secondary"><i class="mdi mdi-chevron-right"></i></button>
+          <div class="btn-group toolbar-item" role="group" aria-label="Basic example"></div>
+          <form method='post' action="/filter_by_device">
+              <input name="dates"/>
+              <select name="uuid">
+                {% for location in device_locations %}
+                <option name = "uuid" value= "{{location}}" SELECTED>{{location}}</option>"
+                {% endfor %}
+              </select>
+              <input name="filter_button" type="submit" class="btn btn-secondary"><i class="mdi mdi-chevron-right"></i>
+            </form> 
           </div>
           <div class="filter-wrapper">
             <div class="dropdown toolbar-item">
@@ -66,48 +72,72 @@
         <div class="card">
           <div class="card-body">
             <div class="row">
-              <div class="col-lg-3 col-md-6">
+              <div class="col-lg-3 col-md-3 mt-md-0 mt-4">
                 <div class="d-flex">
                   <div class="wrapper">
-                    <h3 class="mb-0 font-weight-semibold">32,451</h3>
-                    <h5 class="mb-0 font-weight-medium text-primary">Visits</h5>
-                    <p class="mb-0 text-muted">+14.00(+0.50%)</p>
+                    <h3 class="mb-0 font-weight-semibold">0</h3>
+                    <h5 class="mb-0 font-weight-medium text-primary">Car</h5>
+                    <!--<p class="mb-0 text-muted">+138.97(+0.54%)</p>-->
                   </div>
                   <div class="wrapper my-auto ml-auto ml-lg-4">
                     <canvas height="50" width="100" id="stats-line-graph-1"></canvas>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-6 mt-md-0 mt-4">
+              <div class="col-lg-3 col-md-3 mt-md-0 mt-4">
                 <div class="d-flex">
                   <div class="wrapper">
-                    <h3 class="mb-0 font-weight-semibold">15,236</h3>
-                    <h5 class="mb-0 font-weight-medium text-primary">Impressions</h5>
-                    <p class="mb-0 text-muted">+138.97(+0.54%)</p>
+                    <h3 class="mb-0 font-weight-semibold">0</h3>
+                    <h5 class="mb-0 font-weight-medium text-primary">Motorbike</h5>
+                    <!--<p class="mb-0 text-muted">+138.97(+0.54%)</p>-->
                   </div>
                   <div class="wrapper my-auto ml-auto ml-lg-4">
                     <canvas height="50" width="100" id="stats-line-graph-2"></canvas>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-6 mt-md-0 mt-4">
+              <div class="col-lg-3 col-md-3 mt-md-0 mt-4">
                 <div class="d-flex">
                   <div class="wrapper">
-                    <h3 class="mb-0 font-weight-semibold">7,688</h3>
-                    <h5 class="mb-0 font-weight-medium text-primary">Conversation</h5>
-                    <p class="mb-0 text-muted">+57.62(+0.76%)</p>
+                    <h3 class="mb-0 font-weight-semibold">0</h3>
+                    <h5 class="mb-0 font-weight-medium text-primary">Truck</h5>
+                    <!--<p class="mb-0 text-muted">+138.97(+0.54%)</p>-->
                   </div>
                   <div class="wrapper my-auto ml-auto ml-lg-4">
                     <canvas height="50" width="100" id="stats-line-graph-3"></canvas>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-6 mt-md-0 mt-4">
+              <div class="col-lg-3 col-md-3 mt-md-0 mt-4">
                 <div class="d-flex">
                   <div class="wrapper">
-                    <h3 class="mb-0 font-weight-semibold">1,553</h3>
-                    <h5 class="mb-0 font-weight-medium text-primary">Downloads</h5>
-                    <p class="mb-0 text-muted">+138.97(+0.54%)</p>
+                    <h3 class="mb-0 font-weight-semibold">0</h3>
+                    <h5 class="mb-0 font-weight-medium text-primary">Person</h5>
+                    <!--<p class="mb-0 text-muted">+138.97(+0.54%)</p>-->
+                  </div>
+                  <div class="wrapper my-auto ml-auto ml-lg-4">
+                    <canvas height="50" width="100" id="stats-line-graph-4"></canvas>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 mt-md-0 mt-4">
+                <div class="d-flex">
+                  <div class="wrapper">
+                    <h3 class="mb-0 font-weight-semibold">0</h3>
+                    <h5 class="mb-0 font-weight-medium text-primary">Bicycle</h5>
+                    <!--<p class="mb-0 text-muted">+138.97(+0.54%)</p>-->
+                  </div>
+                  <div class="wrapper my-auto ml-auto ml-lg-4">
+                    <canvas height="50" width="100" id="stats-line-graph-3"></canvas>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 mt-md-0 mt-4">
+                <div class="d-flex">
+                  <div class="wrapper">
+                    <h3 class="mb-0 font-weight-semibold">0</h3>
+                    <h5 class="mb-0 font-weight-medium text-primary">Bus</h5>
+                    <!--<p class="mb-0 text-muted">+138.97(+0.54%)</p>-->
                   </div>
                   <div class="wrapper my-auto ml-auto ml-lg-4">
                     <canvas height="50" width="100" id="stats-line-graph-4"></canvas>
@@ -120,13 +150,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-8 grid-margin stretch-card">
+      <div class="col-md-12 grid-margin stretch-card">
         <div class="card">
-          <div class="card-body">
-            <h4 class="card-title mb-0">Sales Statistics Overview</h4>
+          <div class="card-body" style="height: 400px">
+            <h4 class="card-title mb-0">Mobility Data</h4>
             <div class="d-flex flex-column flex-lg-row">
               <p>Lorem ipsum is placeholder text commonly used</p>
-              <ul class="nav nav-tabs sales-mini-tabs ml-lg-auto mb-4 mb-md-0" role="tablist">
+              <!-- <ul class="nav nav-tabs sales-mini-tabs ml-lg-auto mb-4 mb-md-0" role="tablist">
                 <li class="nav-item">
                   <a class="nav-link active" id="sales-statistics_switch_1" data-toggle="tab" role="tab" aria-selected="true">1D</a>
                 </li>
@@ -139,9 +169,9 @@
                 <li class="nav-item">
                   <a class="nav-link" id="sales-statistics_switch_4" data-toggle="tab" role="tab" aria-selected="false">1Y</a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
-            <div class="d-flex flex-column flex-lg-row">
+            <!-- <div class="d-flex flex-column flex-lg-row">
               <div class="data-wrapper d-flex mt-2 mt-lg-0">
                 <div class="wrapper pr-5">
                   <h5 class="mb-0">Total Cost</h5>
@@ -159,23 +189,52 @@
                 </div>
               </div>
               <div class="ml-lg-auto" id="sales-statistics-legend"></div>
-            </div>
-            <canvas class="mt-5" height="120" id="sales-statistics-overview"></canvas>
+            </div> -->
+            <canvas id="mobilityChart" width="400" height="300"></canvas>
+            
           </div>
         </div>
       </div>
-      <div class="col-md-4 grid-margin stretch-card">
+      <!-- <div class="col-md-4 grid-margin stretch-card">
         <div class="card">
-          <div class="card-body d-flex flex-column">
+           <div class="card-body d-flex flex-column">
             <div class="wrapper">
               <h4 class="card-title mb-0">Net Profit Margin</h4>
               <p>Started collecting data from February 2019</p>
               <div class="mb-4" id="net-profit-legend"></div>
             </div>
             <canvas class="my-auto mx-auto" height="250" id="net-profit"></canvas>
+          </div> 
+        </div>
+      </div> -->
+    </div>
+    <div class="row">
+      <div class="col-md-12 grid-margin stretch-card">
+        <div class="card">
+          <div class="card-body" style="height: 400px">
+            <h4 class="card-title mb-0">Sensor Data</h4>
+            <div class="d-flex flex-column flex-lg-row">
+              <p>Lorem ipsum is placeholder text commonly used</p>
+              
+            </div>
+            
+            <canvas id="sensorChart" width="400" height="300"></canvas>
+            
           </div>
         </div>
       </div>
+      <!-- <div class="col-md-4 grid-margin stretch-card">
+        <div class="card">
+           <div class="card-body d-flex flex-column">
+            <div class="wrapper">
+              <h4 class="card-title mb-0">Net Profit Margin</h4>
+              <p>Started collecting data from February 2019</p>
+              <div class="mb-4" id="net-profit-legend"></div>
+            </div>
+            <canvas class="my-auto mx-auto" height="250" id="net-profit"></canvas>
+          </div> 
+        </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="col-md-8">
@@ -582,4 +641,202 @@
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
   <script src="/static/assets/js/demo_1/dashboard.js"></script>
+  <script src="/static/assets/js/demo_1/dashboardFunctions.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@0.1.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+  <script src="https://unpkg.com/@cubejs-client/core@0.10.16/dist/cubejs-client-core.umd.js"></script>
+
+  <script>
+    function random_rgba() {
+      var o = Math.round, r = Math.random, s = 255;
+      return 'rgba(' + o(r()*s) + ',' + o(r()*s) + ',' + o(r()*s) + ',' + r().toFixed(1) + ')';
+    }
+    var color1 = random_rgba()
+    var color2 = random_rgba()
+    var color3 = random_rgba()
+    var color4 = random_rgba()
+    var color5 = random_rgba()
+    var color6 = random_rgba()
+    const mob_ctx = document.getElementById('mobilityChart').getContext('2d');
+    var date = {{bicycle["datetime"].values.tolist()|tojson|safe}}
+    const mobChart = new Chart(mob_ctx, {
+        type: 'line',
+        data: {
+            labels: date,
+            datasets: [
+            {   
+                label: 'Bicycles',
+                data: {{bicycle["count"].values.tolist()|tojson|safe}},
+                backgroundColor: color1,
+                borderColor: color1,
+                borderWidth: 1
+            },
+            {
+              label: 'Bus',
+              data: {{bus["count"].values.tolist()|tojson|safe}},
+              backgroundColor: color2,
+              borderColor: color2,
+              borderWidth: 1
+            },
+            {
+              label: 'Car',
+              data: {{car["count"].values.tolist()|tojson|safe}},
+              backgroundColor: color3,
+              borderColor: color3,
+              borderWidth: 1
+            },
+            {
+              label: 'Motorbike',
+              data: {{motorbike["count"].values.tolist()|tojson|safe}},
+              backgroundColor: color4,
+              borderColor: color4,
+              borderWidth: 1
+            },
+            {
+              label: 'Person',
+              data: {{person["count"].values.tolist()|tojson|safe}},
+              backgroundColor: color5,
+              borderColor: color5,
+              borderWidth: 1
+            },
+            {
+              label: 'Truck',
+              data: {{truck["count"].values.tolist()|tojson|safe}},
+              backgroundColor: color6,
+              borderColor: color6,
+              borderWidth: 1
+            },
+          ],
+        },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+            scales: {
+                y: {
+                    beginAtZero: true
+                },
+                x: {
+                   
+                },
+            }
+        }
+    });
+    
+  </script>
+  <script>
+    const sens_ctx = document.getElementById('sensorChart').getContext('2d');
+
+    const labels = {{sps['mean']['datetime'].values.tolist()|tojson|safe}};
+    const data = {
+      labels: labels,
+      datasets: [
+        {
+          label: 'mean',
+          data: {{sps['mean']['pm1_0'].values.tolist()|tojson|safe}},
+          borderColor: 'rgba(225, 165, 0, 0.2)',
+          backgroundColor: 'rgba(225, 165, 0, 0.5)',
+        },
+        {
+          label: 'min',
+          data: {{sps['min']['pm1_0'].values.tolist()|tojson|safe}},
+          borderColor: 'rgba(0, 128, 0, 0.2)',
+          backgroundColor: 'rgba(0, 128, 0, 0.5)',
+        },
+        {
+          label: 'max',
+          data: {{sps['max']['pm1_0'].values.tolist()|tojson|safe}},
+          borderColor: 'rgba(255, 99, 132, 0.2)',
+          backgroundColor: 'rgba(255, 99, 132, 0.5)',
+        },
+      ]
+    };
+    
+    const sensChart = new Chart(sens_ctx, {
+        type: 'line',
+        data: data,
+        options: {
+          responsive: true,
+          plugins: {
+            legend: {
+              position: 'top',
+            },
+            title: {
+              display: true,
+              text: 'PM1.0'
+            }
+          },      
+          maintainAspectRatio: false,
+            scales: {
+                y: {
+                    beginAtZero: true
+                },
+                x: {
+                   
+                },
+            }
+        }
+    });
+    
+  </script>
+
+  <script>
+    const START_DATE = "08/12/2021";
+    const END_DATE = "09/25/2021";
+
+    $('input[name="dates"]').daterangepicker({
+      locale: {
+        format : 'DD/MM/YYYY',
+      }},
+      {
+        startDate: START_DATE,
+        endDate: END_DATE
+      },
+      function (start, end) {
+        drawChart(start, end);
+      }
+    );
+  </script>
+  <script>
+    const cubejsApi = cubejs(
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1OTQ2NjY4OTR9.0fdi5cuDZ2t3OSrPOMoc3B1_pwhnWj4ZmM3FHEX7Aus",
+      {
+        apiUrl:
+          "https://awesome-ecom.gcp-us-central1.cubecloudapp.dev/cubejs-api/v1"
+      }
+    );
+    var drawChart = function (startDate, endDate) {
+      cubejsApi
+        .load({
+          measures: ["Orders.count"],
+          timeDimensions: [
+            {
+              dimension: "Orders.createdAt",
+              granularity: `day`,
+              dateRange: [startDate, endDate]
+            }
+          ]
+        })
+        .then((resultSet) => {
+          var data = chartJsData(resultSet);
+          if (window.chart) {
+            window.chart.data = data;
+            window.chart.update();
+          } else {
+            window.chart = new Chart(document.getElementById("chart-canvas"), {
+              type: "line",
+              options: options,
+              data: data
+            });
+          }
+        });
+    };
+    
+    drawChart(START_DATE, END_DATE);
+    
+    </script>
 {% endblock javascripts %}
