--- a/app/base/templates/includes/navigation.html
+++ b/app/base/templates/includes/navigation.html
@@ -7,6 +7,7 @@
             <img src="/static/assets/images/logo-mini.svg" alt="logo" /> </a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center">
+          <!--
           <ul class="navbar-nav">
             <li class="nav-item font-weight-semibold d-none d-lg-block">Help : +050 2992 709</li>
             <li class="nav-item dropdown language-dropdown">
@@ -42,11 +43,13 @@
               </div>
             </li>
           </ul>
+          
           <form class="ml-auto search-form d-none d-md-block" action="#">
             <div class="form-group">
               <input type="search" class="form-control" placeholder="Search Here">
             </div>
           </form>
+          
           <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
               <a class="nav-link count-indicator" id="messageDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
@@ -85,6 +88,7 @@
                 </a>
               </div>
             </li>
+            
             <li class="nav-item dropdown">
               <a class="nav-link count-indicator" id="notificationDropdown" href="#" data-toggle="dropdown">
                 <i class="mdi mdi-email-outline"></i>
@@ -124,12 +128,13 @@
                 </a>
               </div>
             </li>
-            <li class="nav-item dropdown d-none d-xl-inline-block user-dropdown">
+            -->
+            <li class="nav-item dropdown d-none d-xl-inline-block user-dropdown" style="float: right;">
               <a class="nav-link dropdown-toggle" id="UserDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
-                <img class="img-xs rounded-circle" src="/static/assets/images/faces/face8.jpg" alt="Profile image"> </a>
+                <img class="img-xs rounded-circle" src="/static/assets/images/thumb_images/shield.jpg" alt="Profile image"> </a>
               <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
                 <div class="dropdown-header text-center">
-                  <img class="img-md rounded-circle" src="/static/assets/images/faces/face8.jpg" alt="Profile image">
+                  <img class="img-md rounded-circle" src="/static/assets/images/thumb_images/shield.jpg" alt="Profile image">
                   <p class="mb-1 mt-3 font-weight-semibold">
                     {{ current_user.username }}
                   </p>
@@ -137,8 +142,11 @@
                     {{ current_user.email }}
                   </p>
                 </div>
+
+                <!--
                 <a href="#" class="dropdown-item">My Profile<i class="dropdown-item-icon ti-dashboard"></i></a>
                 <a href="#" class="dropdown-item">Messages <span class="badge badge-pill badge-danger">2</span><i class="dropdown-item-icon ti-comment-alt"></i></a>
+                -->
                 <a href="{{ url_for('base_blueprint.logout') }}" class="dropdown-item">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
               </div>
             </li>
