--- a/app/base/templates/accounts/login.html
+++ b/app/base/templates/accounts/login.html
@@ -10,8 +10,8 @@
         <div class="row w-100">
             <div class="col-lg-4 mx-auto">
 
-                <h2 class="text-center mb-4 text-white">Login</h2>
-                <div class="auto-form-wrapper">
+                <h2 class="text-center mb-4 ssg-blue">Login</h2>
+                <div class="auto-form-wrapper auth-logo-ssg">
 
                     <center>
         
@@ -51,7 +51,7 @@
                     </div>
                     </div>
                     <div class="form-group">
-                    <button type="submit" name="login" class="btn btn-primary submit-btn btn-block">Login</button>
+                    <button type="submit" name="login" class="btn btn-primary submit-btn btn-block ssg">Login</button>
                     </div>
                     <div class="form-group d-flex justify-content-between">
                     <div class="form-check form-check-flat mt-0">
