--- a/app/base/static/assets/css/shared/style.css
+++ b/app/base/static/assets/css/shared/style.css
@@ -7317,6 +7317,13 @@ a.text-dark:hover, a.text-dark:focus {
 .text-white-50 {
   color: rgba(255, 255, 255, 0.5) !important; }
 
+.ssg-blue {
+  color: rgba(0, 6, 54, 1) !important; }
+
+.ssg-blue {
+  color: rgba(0, 6, 54, 1) !important; }
+
+
 .text-hide {
   font: 0/0 a;
   color: transparent;
@@ -9757,7 +9764,10 @@ ul {
 .auth {
   min-height: 100vh; }
   .auth.auth-bg-1 {
-    background: url("../../images/auth/login_1.jpg");
+    background: url("../../images/bg.jpg");
+    background-size: cover; }
+  .auth.auth-logo-ssg {
+    background: url("../../images/shield-big.png");
     background-size: cover; }
   .auth.register-bg-1 {
     background: url("../../images/auth/register.jpg") center center no-repeat;
