--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -30,7 +30,6 @@
         </div>
       </div>
       -->
-
       <div class="col-md-12">
         <div class="page-header-toolbar">
           <div class="btn-group toolbar-item" role="group" aria-label="Basic example"></div>
@@ -224,13 +223,15 @@
       <div class="col-md-12 grid-margin stretch-card">
         <div class="card">
           <div class="card-body" style="height: 400px">
-            <h4 class="card-title mb-0">Sensor Data</h4>
+
             <div class="d-flex flex-column flex-lg-row">
-              <p>Lorem ipsum is placeholder text commonly used</p>
+
               
             </div>
             
-            <canvas id="sensorChart" width="400" height="300"></canvas>
+            <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+            <body style='margin: 0'>
+            <div style="width: 100%; height: 100%" id="mapContainer"></div>
             
           </div>
         </div>
@@ -248,6 +249,7 @@
         </div>
       </div> -->
     </div>
+    <!--
     <div class="row">
       <div class="col-md-8">
         <div class="row">
@@ -646,6 +648,7 @@
         </div>
       </div>
     </div>
+    -->
   </div>
 
 {% endblock content %}
@@ -662,7 +665,57 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
   <script src="https://unpkg.com/@cubejs-client/core@0.10.16/dist/cubejs-client-core.umd.js"></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"type="text/javascript" charset="utf-8"></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"type="text/javascript" charset="utf-8"></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" type="text/css"href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
+  <script>
+    // Initialize the platform object:
+    var platform = new H.service.Platform({
+    'apikey': '4dplr5LKK-lnGG3BdehJQeoKbDxmt3VliU-OGAxK2ZA'
+    });  
 
+    const lat = 51.480864;
+    const long = -0.149199;
+    
+
+    // Obtain the default map types from the platform object
+    var maptypes = platform.createDefaultLayers();
+
+    // Instantiate (and display) a map object:
+    var map = new H.Map(
+    document.getElementById('mapContainer'),
+    maptypes.raster.terrain.map,
+    {
+      zoom: 11,
+      center: { lat: lat, lng: long }  
+    });
+    var mapEvents = new H.mapevents.MapEvents(map);
+	
+	// Add event listener:
+	  map.addEventListener('tap', function(evt) {
+    // Log 'tap' and 'mouse' events:
+      console.log(evt.type, evt.currentPointer.type); 
+    });
+
+    // Instantiate the default behavior, providing the mapEvents object:
+	  var behavior = new H.mapevents.Behavior(mapEvents);
+
+    //window.addEventListener('resize',()=> get.ViewProt().resize())
+    var marker = new H.map.Marker({ lat: lat, lng: long });
+     
+    // Add the marker to the map:
+    map.addObject(marker);
+
+    var ui = H.ui.UI.createDefault(map, maptypes);
+
+    {% for location in lat_long_list %} 
+      var marker = new H.ui.InfoBubble({ lat: {{location[1]}}, lng: {{location[2]}} }, {content: '<b>{{location[0]}}</b>'} );
+      ui.addBubble(marker);
+    {% endfor %}
+
+  </script>
   <script>
     function random_rgba() {
       var o = Math.round, r = Math.random, s = 255;
